--- a/css/contact.css
+++ b/css/contact.css
@@ -147,10 +147,10 @@
         font-size: 2.7em;
     }
     #contact h2 {
-    font-size: 2.5em;
+    font-size: 4em;
     }
 
     #contact p {
-    font-size: 2.2em;
+    font-size: 3em;
     }
 }
