--- a/css/projets.css
+++ b/css/projets.css
@@ -29,7 +29,7 @@
 #projets p {
     font-size: 1.2em;
     color: #333533a6;
-    margin-top: 0.5em;
+    margin-top: 0;
     margin-bottom: 1.5em;
 }
 
@@ -130,17 +130,42 @@
 }
 
 @media (max-width: 57vh) {
+    #projets h2 {
+        font-size: 4em;
+    }
+    
+    #projets p {
+        font-size: 2.8em;
+    }
+    
     .projets-flexbox {
         flex-direction: column;
         gap: 2em;
         align-items: center;
     }
     .projet-card {
-        width: 90vw;
-        max-width: 500px;
-        min-width: 500px;
-        padding: 3em 2em;
+        width: 95vw;
+        max-width: 650px;
+        min-width: 550px;
+        padding: 4em 3em;
         transition: transform 0.3s ease, box-shadow 0.3s ease;
+    }
+    
+    .projet-card h3 {
+        font-size: 3em;
+        margin-bottom: 0.8em;
+    }
+    
+    .projet-card p {
+        font-size: 3em;
+        line-height: 1.5;
+        margin-bottom: 1em;
+    }
+    
+    .projet-img {
+        max-width: 300px;
+        height: 250px;
+        margin-bottom: 1.5em;
     }
     
     .projet-card:hover {
@@ -152,13 +177,11 @@
     }
     .projets-encadre {
         margin-top: 15em;
-        padding: 0.5em 0.5em 0.5em 0.5em;
+        padding: 1em 1em 1em 1em;
         border-radius: 18px;
     }
     .btn-voir-plus {
-        font-size: 1.7em;
-    }
-    .projet-card h3 {
-    font-size: 2.3em;
+        font-size: 2.25em;
+        padding: 1.2em 2.5em;
     }
 }
